examples/errors/parsing/listlength-no-of-in-case.rcn
sort Lst(a) = { Nil : () | Cons : (a * Lst(a)) }
fun length (xs : Lst(Int)) -> Int [spec] =
  case xs {
      Nil u -> 0
    | Cons p -> let (x, xs') = p; 1 + length(xs')
  }
main : () [impure] = ()
